--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "ether": "^0.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
